# baby-name-tournament

./: .editorconfig  .env  .gitignore  Cargo.toml  LICENSE  deny.toml  renovate.json  sqlx-data.json
.github/workflows/: ci.yaml
.sqlx/: query-0364aac10b080c8e5d74f277519b7eee8c043a1a643250941ce0402fda7018f9.json  query-0b5474cb3640e32c1923653189416191cfbcfeb1eb456623588e7aff09d1298e.json  query-1aebb982bd3ed565b2fc1afbcf7ada8d533877b20b4e4219fad17e2d35f6e2d6.json  query-1c1cb14d6d50d25553004499a3e9d418803d0bf8b26d2ac8071ea8d51bbe6a0f.json  query-20ea9e607f0a5e9362b8ae6246f2df1e8fc095f61c843904571422b3b7a449f5.json  query-76e3f29bdc1ee7075de9d5e7e06ec1ea597e60ae4ba99e550dc9354f65fca25b.json  query-8888067d3205499f00ce1669c7d7de3bd88826fb9b1d78c9cac098b8b3d6ea60.json  query-8a828cdd032e484132dae76db4479cf3d2333dcd1d9626788c80bd8261089731.json  query-8abbf2bed3048b8040d51ba5234c55486e9a34b8412a7ac901633e2bdb2a7d2b.json  query-8df78c86fe9710c62d0b381a510f8195edbb9ec3f8c961db83019d868ed4e01c.json  query-d09e848aa136db068ee5edba8ef2a1fe7202ad364702a59398d0fd556e2eb51c.json  query-ed1d76caa95d45cad60ff1c2e26549f0f3cf863eeb803dbede7744e38044c1e2.json  query-f0602d903e4539ccacd42266dc276f30efed3288a9dab8606f3d6a3754d86ac4.json  query-fb9a58057c8dee1e1804086e5971c3a5512862bb27f67dee4bd344ae10f84d3c.json
migrations/: 20230208215959_name-list.down.sql  20230208215959_name-list.up.sql  20230220230734_similarity.up.sql  20230321200004_parents.down.sql  20230321200004_parents.up.sql  20230520120537_restrict-parents-to-two.down.sql  20230520120537_restrict-parents-to-two.up.sql  20230528195637_simplified-name-preferences.down.sql  20230528195637_simplified-name-preferences.up.sql  20241212000603_remove_similarity.down.sql  20241212000603_remove_similarity.up.sql  20250218232032_single-preference.down.sql  20250218232032_single-preference.up.sql
resources/ui/: name_list.ui  window.ui
src/: cosmic.rs  csv_parser.rs  database.rs  gtk.rs  gui.rs  main.rs  similarities.rs  tui.rs  utils.rs
src/database/: views.rs
src/gtk/: backend.rs  database_list.rs  force_unwrapped_field.rs  gender_dropdown.rs  main_view.rs  name_list.rs  runtime_thread.rs
src/gtk/database_list/: database_list_manager.rs  database_list_model.rs
src/gtk/main_view/: preference_filter.rs
src/gtk/name_list/: name_list_row.rs
src/gui/: backend.rs  database_list.rs  database_list_model.rs  force_unwrapped_field.rs  gender_dropdown.rs  main_view.rs  name_detail_view.rs  name_list.rs  name_model.rs  name_preference.rs  window.rs
src/gui/backend/: implementation.rs
src/gui/database_list/: database_list_manager.rs  database_list_model.rs
src/gui/database_list_model/: implementation.rs
src/gui/main_view/: preference_filter.rs
src/gui/name_list/: implementation.rs  name_list_row.rs
(+4 files in other folders)
