[package]
name = "baby-name-tournament"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-channel = "1"
clap = { version = "4", features = ["derive", "env"] }
derive_more = "0.99"
dotenvy = "0.15"
csv = "1"
futures-util = { version = "0.3", default-features = false }
# NOTE: Using 0.3 because that's what `relm4` depends on
libadwaita = { version = "0.5", features = ["v1_1", "gtk_v4_6"] }
relm4 = { version = "0.6.0-beta.1", features = ["libadwaita"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
static_assertions = "1"
similar-string = "1"
stringmetrics = "2"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["rt", "io-std", "time", "macros"] }
