[package]
name = "baby-name-tournament"
version = "0.1.0"
edition = "2021"
license = "ISC"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

cargo_common_metadata = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"
explicit_deref_methods = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[dependencies]
anyhow = "1"
async-channel = "2"
clap = { version = "4", features = ["derive", "env"] }
derive_more = { version = "1.0", features = ["from"] }
dotenvy = "0.15"
csv = "1"
futures-util = { version = "0.3", default-features = false }
relm4 = { version = "0.9", features = ["libadwaita"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
static_assertions = "1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["rt", "io-std", "time", "macros"] }
